# ddlint

./: Cargo.toml  README.md  analyzer.rs  config.rs  ddlint.yml  finding.rs  main.rs  output.rs  rules.rs
.github/: dependabot.yml
.github/workflows/: bump-version.yml  ci.yml  release.yml
src/: analyzer.rs  config.rs  dialect.rs  dialect_rules.rs  finding.rs  main.rs  output.rs
src/rules/: add_column_enum.rs  add_column_no_algorithm_instant.rs  add_column_not_null_no_default.rs  add_foreign_key.rs  add_primary_key.rs  add_unique_constraint.rs  alter_foreign_key.rs  change_column.rs  change_column_enum.rs  create_unique_index.rs  drop_column.rs  drop_primary_key.rs  drop_table.rs  lock_tables.rs  mod.rs  modify_column.rs  modify_column_enum.rs  multi_statement_migration.rs  rename_column.rs  rename_table.rs  truncate.rs
tests/: integration.rs
