[package]
name = "ddlint"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "ddlint"
path = "src/main.rs"

[dependencies]
sqlparser  = "0.62"
anyhow     = "1"
colored    = "3"
walkdir    = "2"
glob       = "0.3"
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
clap       = { version = "4", features = ["derive"] }

[dev-dependencies]
indoc    = "2"
tempfile = "3"
